compiler/weave_syntax/tests/data/syntax/IncompleteNamespace7.error
error: unexpected token '[token::end-of-file]', expected '}'
        --> <source>:6:1
         |
       6 | 
         | ^
